# colab-tutorial

./: .gitignore  README.md  SPECIFICATION.md  WORKFLOW.md
.github/ISSUE_TEMPLATE/: feature_template.md
backend/: crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: cards.py  decks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: decks.js
frontend/src/router/: index.js
frontend/src/views/: DeckCreateView.vue  DeckListView.vue
